adding gradle properties